# IPC4Practise

./: Makefile  Makefile.am  README.md  bullshit.sh  config.h  config.status  configure.ac  debug.h  named_pipe.c  pipe  pipe.c
named_pipe/: Makefile  Makefile.am  named_pipe  named_pipe.c
named_pipe/.deps/: execnamedpipe-named_pipe.Po  named_pipe-named_pipe.Po
pipe/: Makefile  Makefile.am  pipe  pipe.c
pipe/.deps/: execpipe-pipe.Po  pipe-pipe.Po  pipe.Po
posix_semaphores/: Makefile  Makefile.am  process_semaphores.c  thread_semaphores.c
posix_semaphores/.deps/: execposixsemaphores-posix_semaphores.Po  execprocesssemaphores-process_semaphores.Po  execthreadsemaphores-thread_semaphores.Po
sys/: debug.c
sys/.deps/: execnamedpipe-debug.Po  execpipe-debug.Po  execposixsemaphores-debug.Po  execprocesssemaphores-debug.Po  execthreadsemaphores-debug.Po  execxsimessages-debug.Po  execxsisharedmemory-debug.Po  named_pipe-debug.Po  pipe-debug.Po  xsi_messages-debug.Po
xsi_messages/: Makefile  Makefile.am  xsi_messages  xsi_messages.c
xsi_messages/.deps/: execxsimessages-xsi_messages.Po  xsi_messages-xsi_messages.Po
xsi_shared_memory/: Makefile  Makefile.am  xsi_shared_memory.c
xsi_shared_memory/.deps/: execxsisharedmemory-xsi_shared_memory.Po
